cmake_minimum_required(VERSION 3.22)
project(LuoguBook_Base)

set(CMAKE_CXX_STANDARD 14)

add_executable(LuoguBook_Base main.cpp)

# Part1
# Chapter1
add_executable(HelloLuogu Introduction_to_Cpp/Chapter1/HelloLuogu.cpp)
add_executable(UimMoney Introduction_to_Cpp/Chapter1/UimMoney.cpp)
add_executable(P1000 Introduction_to_Cpp/Chapter1/P1000.cpp)

# Chapter2
add_executable(apple Introduction_to_Cpp/Chapter2/apple.cpp)
add_executable(exchange_variables Introduction_to_Cpp/Chapter2/exchange_variables.cpp)
add_executable(P5703 Introduction_to_Cpp/Chapter2/P5703.cpp)
add_executable(P5704 Introduction_to_Cpp/Chapter2/P5704.cpp)
add_executable(P5705 Introduction_to_Cpp/Chapter2/P5705.cpp)
add_executable(P5706 Introduction_to_Cpp/Chapter2/P5706.cpp)
add_executable(P5707 Introduction_to_Cpp/Chapter2/P5707.cpp)
add_executable(P1425 Introduction_to_Cpp/Chapter2/P1425.cpp)
add_executable(P2433 Introduction_to_Cpp/Chapter2/P2433.cpp)
add_executable(P5708 Introduction_to_Cpp/Chapter2/P5708.cpp)
add_executable(P1421 Introduction_to_Cpp/Chapter2/P1421.cpp)
add_executable(P5709 Introduction_to_Cpp/Chapter2/P5709.cpp)
