cmake_minimum_required(VERSION 3.22)
project(LuoguBook_Base)

set(CMAKE_CXX_STANDARD 14)

add_executable(LuoguBook_Base main.cpp)

# Part1
# Chapter1
add_executable(HelloLuogu Introduction_to_Cpp/Chapter1/HelloLuogu.cpp)
add_executable(UimMoney Introduction_to_Cpp/Chapter1/UimMoney.cpp)
add_executable(P1000 Introduction_to_Cpp/Chapter1/P1000.cpp)

# Chapter2
add_executable(apple Introduction_to_Cpp/Chapter2/apple.cpp)
add_executable(exchange_variables Introduction_to_Cpp/Chapter2/exchange_variables.cpp)
add_executable(P5703 Introduction_to_Cpp/Chapter2/P5703.cpp)
add_executable(P5704 Introduction_to_Cpp/Chapter2/P5704.cpp)
add_executable(P5705 Introduction_to_Cpp/Chapter2/P5705.cpp)
add_executable(P5706 Introduction_to_Cpp/Chapter2/P5706.cpp)
add_executable(P5707 Introduction_to_Cpp/Chapter2/P5707.cpp)
add_executable(P1425 Introduction_to_Cpp/Chapter2/P1425.cpp)
add_executable(P2433 Introduction_to_Cpp/Chapter2/P2433.cpp)
add_executable(P5708 Introduction_to_Cpp/Chapter2/P5708.cpp)
add_executable(P1421 Introduction_to_Cpp/Chapter2/P1421.cpp)
add_executable(P5709 Introduction_to_Cpp/Chapter2/P5709.cpp)
add_executable(P2181 Introduction_to_Cpp/Chapter2/P2181.cpp)
add_executable(P3954 Introduction_to_Cpp/Chapter2/P3954.cpp)

# Chapter3
add_executable(P5710 Introduction_to_Cpp/Chapter3/P5710.cpp)
add_executable(P5711 Introduction_to_Cpp/Chapter3/P5711.cpp)
add_executable(P5712 Introduction_to_Cpp/Chapter3/P5712.cpp)
add_executable(P5713 Introduction_to_Cpp/Chapter3/P5713.cpp)
add_executable(P5714 Introduction_to_Cpp/Chapter3/P5714.cpp)
add_executable(P5715 Introduction_to_Cpp/Chapter3/P5715.cpp)
add_executable(P5716 Introduction_to_Cpp/Chapter3/P5716.cpp)
add_executable(P1085 Introduction_to_Cpp/Chapter3/P1085.cpp)
add_executable(P1909 Introduction_to_Cpp/Chapter3/P1909.cpp)
add_executable(P1055 Introduction_to_Cpp/Chapter3/P1055.cpp)
add_executable(P1422 Introduction_to_Cpp/Chapter3/P1422.cpp)
add_executable(P1424 Introduction_to_Cpp/Chapter3/P1424.cpp)
add_executable(P1888 Introduction_to_Cpp/Chapter3/P1888.cpp)
add_executable(P1046 Introduction_to_Cpp/Chapter3/P1046.cpp)
add_executable(P1047 Introduction_to_Cpp/Chapter3/P1047.cpp)
add_executable(P4414 Introduction_to_Cpp/Chapter3/P4414.cpp)
