cmake_minimum_required(VERSION 3.22)
project(LuoguBook_Base)

set(CMAKE_CXX_STANDARD 14)

add_executable(LuoguBook_Base main.cpp)

# Part1
# Chapter1
add_executable(HelloLuogu Introduction_to_Cpp/Chapter1/HelloLuogu.cpp)
add_executable(UimMoney Introduction_to_Cpp/Chapter1/UimMoney.cpp)
add_executable(P1000 Introduction_to_Cpp/Chapter1/P1000.cpp)

# Chapter2
add_executable(apple Introduction_to_Cpp/Chapter2/apple.cpp)
add_executable(exchange_variables Introduction_to_Cpp/Chapter2/exchange_variables.cpp)
add_executable(P5703 Introduction_to_Cpp/Chapter2/P5703.cpp)
add_executable(P5704 Introduction_to_Cpp/Chapter2/P5704.cpp)
add_executable(P5705 Introduction_to_Cpp/Chapter2/P5705.cpp)
add_executable(P5706 Introduction_to_Cpp/Chapter2/P5706.cpp)
add_executable(P5707 Introduction_to_Cpp/Chapter2/P5707.cpp)
add_executable(P1425 Introduction_to_Cpp/Chapter2/P1425.cpp)
add_executable(P2433 Introduction_to_Cpp/Chapter2/P2433.cpp)
add_executable(P5708 Introduction_to_Cpp/Chapter2/P5708.cpp)
add_executable(P1421 Introduction_to_Cpp/Chapter2/P1421.cpp)
add_executable(P5709 Introduction_to_Cpp/Chapter2/P5709.cpp)
add_executable(P2181 Introduction_to_Cpp/Chapter2/P2181.cpp)
add_executable(P3954 Introduction_to_Cpp/Chapter2/P3954.cpp)

# Chapter3
add_executable(P5710 Introduction_to_Cpp/Chapter3/P5710.cpp)
add_executable(P5711 Introduction_to_Cpp/Chapter3/P5711.cpp)
add_executable(P5712 Introduction_to_Cpp/Chapter3/P5712.cpp)
add_executable(P5713 Introduction_to_Cpp/Chapter3/P5713.cpp)
add_executable(P5714 Introduction_to_Cpp/Chapter3/P5714.cpp)
add_executable(P5715 Introduction_to_Cpp/Chapter3/P5715.cpp)
add_executable(P5716 Introduction_to_Cpp/Chapter3/P5716.cpp)
add_executable(P1085 Introduction_to_Cpp/Chapter3/P1085.cpp)
add_executable(P1909 Introduction_to_Cpp/Chapter3/P1909.cpp)
add_executable(P1055 Introduction_to_Cpp/Chapter3/P1055.cpp)
add_executable(P1422 Introduction_to_Cpp/Chapter3/P1422.cpp)
add_executable(P1424 Introduction_to_Cpp/Chapter3/P1424.cpp)
add_executable(P1888 Introduction_to_Cpp/Chapter3/P1888.cpp)
add_executable(P1046 Introduction_to_Cpp/Chapter3/P1046.cpp)
add_executable(P5717 Introduction_to_Cpp/Chapter3/P5717.cpp)
add_executable(P4414 Introduction_to_Cpp/Chapter3/P4414.cpp)

# Chapter4
add_executable(sum_of_factorials Introduction_to_Cpp/Chapter4/sum_of_factorials.cpp)
add_executable(P5718 Introduction_to_Cpp/Chapter4/P5718.cpp)
add_executable(P5719 Introduction_to_Cpp/Chapter4/P5719.cpp)
add_executable(P5720 Introduction_to_Cpp/Chapter4/P5720.cpp)
add_executable(P5721 Introduction_to_Cpp/Chapter4/P5721.cpp)
add_executable(P1980 Introduction_to_Cpp/Chapter4/P1980.cpp)
add_executable(P5723 Introduction_to_Cpp/Chapter4/P5723.cpp)
add_executable(P2669 Introduction_to_Cpp/Chapter4/P2669.cpp)
add_executable(P5722 Introduction_to_Cpp/Chapter4/P5722.cpp)
add_executable(P1217 Introduction_to_Cpp/Chapter4/P1217.cpp)
add_executable(P1423 Introduction_to_Cpp/Chapter4/P1423.cpp)
add_executable(P1307 Introduction_to_Cpp/Chapter4/P1307.cpp)
add_executable(P1720 Introduction_to_Cpp/Chapter4/P1720.cpp)
add_executable(P5724 Introduction_to_Cpp/Chapter4/P5724.cpp)
add_executable(P1420 Introduction_to_Cpp/Chapter4/P1420.cpp)
add_executable(P1075 Introduction_to_Cpp/Chapter4/P1075.cpp)
add_executable(P5725 Introduction_to_Cpp/Chapter4/P5725.cpp)
add_executable(P5726 Introduction_to_Cpp/Chapter4/P5726.cpp)
add_executable(P4956 Introduction_to_Cpp/Chapter4/P4956.cpp)
add_executable(P1089 Introduction_to_Cpp/Chapter4/P1089.cpp)
add_executable(P1009 Introduction_to_Cpp/Chapter4/P1009.cpp)

# Chapter 5
add_executable(P1428 Introduction_to_Cpp/Chapter5/P1428.cpp)
add_executable(P1427 Introduction_to_Cpp/Chapter5/P1427.cpp)
add_executable(P5727 Introduction_to_Cpp/Chapter5/P5727.cpp)
add_executable(P1047 Introduction_to_Cpp/Chapter5/P1047.cpp)
add_executable(P5728 Introduction_to_Cpp/Chapter5/P5728.cpp)
add_executable(P5729 Introduction_to_Cpp/Chapter5/P5729.cpp)
add_executable(P2550 Introduction_to_Cpp/Chapter5/P2550.cpp)
add_executable(P1554 Introduction_to_Cpp/Chapter5/P1554.cpp)
add_executable(P1614 Introduction_to_Cpp/Chapter5/P1614.cpp)
add_executable(P2615 Introduction_to_Cpp/Chapter5/P2615.cpp)
add_executable(P5730 Introduction_to_Cpp/Chapter5/P5730.cpp)
add_executable(P2141 Introduction_to_Cpp/Chapter5/P2141.cpp)
add_executable(P2911 Introduction_to_Cpp/Chapter5/P2911.cpp)
